--- a/app/styles/less/components/preloader.less
+++ b/app/styles/less/components/preloader.less
@@ -73,14 +73,6 @@ div.loader
     }
 }
 
-img
-{
-    .loading
-    {
-        visibility: hidden;
-    }
-}
-
 // Keyframes
 
 .keyframes(spinner,
